<?xml version="1.0"?>
<package format="2">
  <name>vl53l0x_ros</name>
  <version>0.0.1</version>
  <description>
    ROS wrapper for the vl53l0x-linux repo.
  </description>
  <maintainer email="ketan@maidbot.com">Ketan Kharche</maintainer>
  <license>MIT</license>
  <buildtool_depend>catkin</buildtool_depend>
  <depend>roscpp</depend>
  <depend>message_generation</depend>
  <depend>message_runtime</depend>
  <depend>std_msgs</depend>

</package>